# agent-key

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  alembic.ini  main.py  pyproject.toml
agent_key/: __init__.py  client.py  exceptions.py  types.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_admin_constraints.py
app/: __init__.py  config.py  database.py  main.py
app/crypto/: __init__.py  envelope.py
app/models/: __init__.py  audit.py  checkout.py  mixins.py  organization.py  policy.py  secret.py  service.py  token.py
app/routers/: admin.py  bootstrap.py  credentials.py  dependencies.py
app/schemas/: admin.py  bootstrap.py  common.py  credentials.py
app/services/: audit.py  auth.py  checkout.py  policy.py  security.py  vault.py
scripts/: seed_providers.py
tests/: conftest.py  test_credentials.py  test_sdk.py
